--- a/CodexNaturalis/src/main/resources/fxml/ColorSelection.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/ColorSelection.fxml
@@ -21,10 +21,8 @@
     <HBox fx:id="colorContainer" alignment="CENTER" spacing="20" styleClass="card-image">
 
     </HBox>
-    <Label fx:id="messageLabel">
-      <font>
-         <Font name="Book Antiqua Bold Italic" size="12.0" />
-      </font></Label>
+    <Label fx:id="messageLabel" styleClass="title-label">
+</Label>
     <Button fx:id="selectColorButton" onAction="#handleSelectColor" style="-fx-background-color: #a2ecbb;" styleClass="little-label" text="Select Color">
     </Button>
     <ImageView fitHeight="201.0" fitWidth="1012.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
