--- a/CodexNaturalis/src/main/resources/fxml/ColorSelection.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/ColorSelection.fxml
@@ -7,27 +7,29 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-
-<VBox alignment="CENTER" spacing="10" styleClass="scene-dimensions, scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.controller.ColorSelectionController">
+<VBox alignment="CENTER" spacing="10" styleClass="scene-dimensions, scene-background" stylesheets="@../styles.css"
+      xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="it.polimi.ingsw.gui.controller.ColorSelectionController">
     <padding>
-        <Insets bottom="10" left="10" right="10" top="10" />
+        <Insets bottom="10" left="10" right="10" top="10"/>
     </padding>
     <ImageView fitHeight="201.0" fitWidth="1012.0" pickOnBounds="true" preserveRatio="true">
-        <Image url="@../Images/CN_decoration10.png" />
+        <Image url="@../Images/CN_decoration10.png"/>
     </ImageView>
     <Label styleClass="title-label" text="CHOOSE A COLOR">
     </Label>
-    <HBox fx:id="colorContainer" alignment="CENTER" spacing="20" styleClass="card-image">
+    <HBox fx:id="colorContainer" alignment="CENTER" spacing="20">
 
     </HBox>
     <Label fx:id="messageLabel" styleClass="title-label">
-</Label>
-    <Button fx:id="selectColorButton" onAction="#handleSelectColor" style="-fx-background-color: #a2ecbb;" styleClass="little-label" text="Select Color">
+    </Label>
+    <Button fx:id="selectColorButton" onAction="#handleSelectColor" style="-fx-background-color: #a2ecbb;"
+            styleClass="little-label" text="Select Color">
     </Button>
     <ImageView fitHeight="201.0" fitWidth="1012.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
-        <Image url="@../Images/CN_decoration10.png" />
+        <Image url="@../Images/CN_decoration10.png"/>
     </ImageView>
-   <Button fx:id="exit" mnemonicParsing="false" onAction="#handleExit" prefHeight="27.0" style="-fx-background-color: #a2ecbb;" styleClass="normal-label" text="EXIT and return to LOBBY">
-   </Button>
+    <Button fx:id="exit" mnemonicParsing="false" onAction="#handleExit" prefHeight="27.0"
+            style="-fx-background-color: #a2ecbb;" styleClass="normal-label" text="EXIT and return to LOBBY">
+    </Button>
 </VBox>
