--- a/CodexNaturalis/src/main/resources/fxml/LobbyMenuState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/LobbyMenuState.fxml
@@ -70,16 +70,42 @@
         </rotationAxis>
         <Image url="@../Images/CN_decoration9.png" />
     </ImageView>
-    <ImageView fitHeight="111.0" fitWidth="103.0" layoutX="659.0" layoutY="669.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="60.0">
+    <ImageView fitHeight="111.0" fitWidth="103.0" layoutX="659.0" layoutY="669.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="650.0" AnchorPane.rightAnchor="650.0">
         <Image url="@../Images/CN_Funghi_kingdom.png" />
     </ImageView>
-    <ImageView fitHeight="102.0" fitWidth="103.0" layoutX="325.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="367.0">
+    <ImageView fitHeight="102.0" fitWidth="103.0" layoutX="325.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="975.0" AnchorPane.topAnchor="367.0">
         <Image url="@../Images/CN_Animal_kingdom.png" />
     </ImageView>
-    <ImageView fitHeight="102.0" fitWidth="103.0" layoutX="659.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="60.0">
+    <ImageView fitHeight="102.0" fitWidth="103.0" layoutX="659.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="650.0" AnchorPane.rightAnchor="650.0" AnchorPane.topAnchor="60.0">
         <Image url="@../Images/CN_Plant_kingdom.png" />
     </ImageView>
-    <ImageView fitHeight="100.0" fitWidth="103.0" layoutX="1002.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="367.0">
+    <ImageView fitHeight="100.0" fitWidth="103.0" layoutX="1002.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="975.0" AnchorPane.topAnchor="367.0">
         <Image url="@../Images/CN_Insect_kingdom.png" />
+    </ImageView>
+    <ImageView fitHeight="132.0" fitWidth="200.0" layoutX="781.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="428.0" AnchorPane.topAnchor="62.0">
+        <image>
+            <Image url="@../Images/CN_Decoration1.jpg" />
+        </image>
+    </ImageView>
+    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="428.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true" rotate="180.0" AnchorPane.leftAnchor="428.0" AnchorPane.topAnchor="62.0">
+        <image>
+            <Image url="@../Images/CN_Decoration1.jpg" />
+        </image>
+        <rotationAxis>
+            <Point3D y="90.0" z="1.0" />
+        </rotationAxis>
+    </ImageView>
+    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="781.0" layoutY="665.0" pickOnBounds="true" preserveRatio="true" rotate="180.0" AnchorPane.bottomAnchor="62.0" AnchorPane.rightAnchor="428.0">
+        <image>
+            <Image url="@../Images/CN_Decoration1.jpg" />
+        </image>
+        <rotationAxis>
+            <Point3D x="90.0" z="1.0" />
+        </rotationAxis>
+    </ImageView>
+    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="434.0" layoutY="665.0" pickOnBounds="true" preserveRatio="true" rotate="180.0" AnchorPane.bottomAnchor="62.0" AnchorPane.leftAnchor="428.0">
+        <image>
+            <Image url="@../Images/CN_Decoration1.jpg" />
+        </image>
     </ImageView>
 </AnchorPane>
