--- a/CodexNaturalis/src/main/resources/fxml/GameState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/GameState.fxml
@@ -1,19 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.view.gui.controller.GameController">
+<AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.view.gui.controller.GameController">
     <HBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
         <VBox alignment="CENTER" layoutX="14.0" layoutY="14.0" spacing="10.0">
             <padding>
@@ -51,7 +44,7 @@
                 </ScrollPane>
                 <TabPane fx:id="playerDeskTabPane" prefWidth="845.0" style="-fx-background-color: #e7dfbd;">
                 </TabPane>
-                <Button fx:id="centerButton" onAction="#handleCenterClick" styleClass="little-label" text="center" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+                <Button fx:id="centerButton" onAction="#handleCenterClick" style="-fx-background-color: #a2ecbb;" styleClass="little-label" text="center" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
             </AnchorPane>
 
             <Label fx:id="infoGame" alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" style="-fx-background-color: #e7dfbd; -fx-background-radius: 5; -fx-border-color: #daae82; -fx-border-radius: 5;" styleClass="normal-label" text="what is happening" />
